# RQwen3

./: .gitignore  .rsyncignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-local.txt
docs/: case-study-outline.md  case-study-plan.md  cluster-operations.md  data-pipeline.md  pretraining-results.md  project-overview.md  roadmap.md  slurm-longleaf-guide.md
longleaf/: .gitignore  build-data.slurm  pretrain.slurm  setup.sh  smoke-pretrain.slurm  test-gpu.slurm
notebooks/: 01-qwen3-overview.ipynb  02-qwen3-from-scratch.ipynb  03-visual-model-analysis.ipynb  04-untrained-vs-trained.ipynb  05-train-rqwen3.ipynb  06-supervised-finetuning.ipynb  07-pretrain-rqwen3.ipynb  Basics AI.ipynb  My Qwen3.ipynb  Qwen3 Visual Analysis.ipynb  Qwen3 Visual Anylasis.ipynb  RQwen3.ipynb  Rqwen.ipynb  qwen1_7B_architecture
notebooks/.ipynb_checkpoints/: 01-qwen3-overview-checkpoint.ipynb  02-qwen3-from-scratch-checkpoint.ipynb  03-visual-model-analysis-checkpoint.ipynb  04-untrained-vs-trained-checkpoint.ipynb  05-train-rqwen3-checkpoint.ipynb  06-supervised-finetuning-checkpoint.ipynb  My Qwen3-checkpoint.ipynb  My-Try-qwen3-checkpoint.ipynb  Rqwen-checkpoint.ipynb
scripts/: build_dataset.py  stitch_manifest.py
scripts/py/: ChatSession.py  RLModel0.py  TrainSession.py  load-qwen3-30B.py  plot_loss_curve.py
src/: __init__.py  config.py  core.py  data.py  pipeline.py  tokenizers.py  training.py  utils.py
src/layers/: __init__.py  activations.py  attention.py  block.py  embeddings.py  feedforward.py  normalization.py
src/models/: __init__.py  rqwen3.py
(+2 files in other folders)
