[project]
name = "qwen3-analysis"
version = "0.1.0"
description = "Exploratory analysis and from-scratch implementation of Qwen3 transformer architectures"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.10.0",
    "transformers>=4.52.0",
    "datasets>=3.0.0",
    "numpy>=2.0.0",
    "accelerate>=1.5.0",
]

[project.optional-dependencies]
local = [
    "jupyter",
    "matplotlib",
    "ipython",
]
cluster = [
    "deepspeed",
]
serve = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
